# my-resume

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
ci/: build_and_push_docker.sh
infrastructure/: app.py  pyproject.toml  requirements.txt
infrastructure/cdk.out/: MyECSClusterStack.assets.json  MyECSClusterStack.template.json  MyResumeClusterStack.assets.json  MyResumeClusterStack.template.json  manifest.json  tree.json
infrastructure/infrastructure/: infrastructure_stack.py
resume/: resume.md
src/: chatbot.py  dashboard.py  db_chains.py
